methods.basics.Methods.scala.code
def goAndGet() {
  var c:Int=0
  while (isOverBaggle()==false){
    forward();c=c+1
  }
  pickupBaggle()
  while (c>0){
    Backward();c=c-1
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}
